# laidocs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  build_sidecar.py  diff.patch  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
.agent/scratch/: review_diff.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-windows.yml
backend/: .env.example  main.py  main.spec  requirements.txt  telemetry_server.py  test_stream.py
backend/api/: __init__.py  backup.py  chat.py  documents.py  folders.py  search.py  settings.py
backend/core/: __init__.py  config.py  database.py  exceptions.py  telemetry.py  vault.py
backend/models/: __init__.py  document.py
backend/services/: agent.py  backup.py  chat_history.py  converter.py  crawler.py  indexer.py  picture_serializer.py  rag.py  search.py  tree_index.py
docs/: chat_with_document_specs.md  page_index_code_review.md  upload_flow_review.md
docs/plans/: 2026-05-06-sidebar-ux-design.md  (+24 more)
guideline/: README.md
scripts/: build_windows_portable.sh  build_windows_sidecar.sh  capture_screenshots.py
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
telemetry_server/: Dockerfile  docker-compose.yml  main.py
tescases/: sample-data.pptx  sample-data.xlsx
tests/: test_converter_fallback.py  test_docling_converter.py  test_picture_serializer.py  test_vault_assets.py
(+24 files in other folders)
